# CodeBlooded

./: .gitignore  Activity Diagram.vpp  BuilderProxy.cpp  Builder_Proxy  Builder_Proxy.cpp  BulkDiscount.cpp  BulkDiscount.h  Cactus.cpp  Cactus.h  CactusFactory.cpp  CactusFactory.h  CareCard.cpp  CareCard.h  Caretaker.cpp  Caretaker.h  Class UML + Overview Activity Diagram.vpp  Class UML.vpp  Command.cpp  Command.h  Customer.cpp  Customer.h  CustomerCommand.cpp  CustomerCommand.h  CustomerFacade.cpp  CustomerFacade.h  CustomerInterface.cpp  CustomerInterface.h  DeadCommand.cpp  DeadCommand.h  DeadHandler.cpp  DeadHandler.h  DeadMonitor.cpp  DeadMonitor.h  DeadState.cpp  DeadState.h  DeleteQueryBuilder.cpp  DeleteQueryBuilder.h  DiscountPrice.cpp  DiscountPrice.h  Doxyfile  (+132 more)
.github/workflows/: cpp.yml
Common/: LoginDialog.cpp  LoginDialog.h  LoginDialog.ui  SharedInstances.h
CustomerWindows/: CustomerMainWindow.cpp  CustomerMainWindow.h  CustomerMainWindow.ui  ReceiptDialog.cpp  ReceiptDialog.h  ReceiptDialog.ui  ReturnOrderDialog.cpp  ReturnOrderDialog.h  ReturnOrderDialog.ui
Documentation/: Activity Diagram.vpp  Class Diagram.vpp  Communcation Diagram.vpp  Object Diagram.vpp  Plant State Diagram.vpp  Sequence Diagram.vpp  SystemUML.vpp
StaffWindows/: PlantManagementWidget.cpp  PlantManagementWidget.h  PlantManagementWidget.ui  StaffMainWindow.cpp  StaffMainWindow.h  StaffMainWindow.ui  StaffManagementWidget.cpp  StaffManagementWidget.h  StaffManagementWidget.ui
tests/: CMakeLists.txt  README.md  SETUP_COMPLETE.md  build_and_run_tests.sh  fix_tests.sh  test_builder_pattern.cpp  test_chain_of_responsibility.cpp  test_command_pattern.cpp  test_composite_pattern.cpp  test_decorator_pattern.cpp  test_facade_pattern.cpp  test_factory_pattern.cpp  test_globals.cpp  test_iterator_pattern.cpp  test_main.cpp  test_memento_pattern.cpp  test_proxy_pattern.cpp  test_state_pattern.cpp  test_strategy_pattern.cpp
